Heading wrapping stopped

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -40,6 +40,7 @@ h1,
 strong,
 h2 {
   color: var(--grayDark);
+  display: block;
 }
 
 .card {
